<resources>
    <string name="app_name">SchedulerEskulUas</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_splash">Scheduler Eskul</string>
    <string name="title_signin">Sign in</string>
    <string name="title_slogan">And save\nyour schedule eskul</string>
    <string name="btn_title_signup"><u>Sign up</u></string>
    <string name="dont_have_account">dont have account?</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="title_sign_up">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="title_registered">Registered</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>

    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="field_not_empty">Field not can not be empty</string>
    <string name="title_event_eskul">Event eskul</string>
    <string name="dummy_name">Reza</string>
    <string name="schedule_eskul">Schedule eskul</string>
    <string name="dummy_type">Futsal</string>
    <string name="title_empty_fav">You don\'t have a favorite event yet.</string>
    <string name="titile_type_eskul">Type eskul</string>
    <string name="description">Description</string>
    <string name="input_desc">input desc</string>
    <string name="place">Place</string>
    <string name="input_place">input place</string>
    <string name="date">Date</string>
    <string name="time_start">Time start</string>
    <string name="time_end">Time finish</string>
    <string name="save">Save</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="time">Time</string>
    <string name="update_title">Update schedule</string>
    <string name="update_success">Update Success!</string>
    <string name="update">Update</string>
    <string name="add_schedule">Add Success!</string>
    <string name="add_title">Add schedule</string>
    <string name="next">Next to continue</string>
    <string name="action_failed">Action Failed!</string>
    <string name="message_error">Unable to retrieve any data from server</string>
    <string name="delete_title">Delete Scheduler Success!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="content_text">Won\'t be able to recover this file!</string>
    <string name="confirm_delete">Yes,delete it!</string>
    <string name="detail">Detail</string>
    <string name="delete_fav">Success delete from favorite</string>
    <string name="add_fav">Success Add to favorite</string>
    <string name="setting">Setting</string>
</resources>