<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.signin.SignInFragment">

    <ImageView
        android:id="@+id/iv_logo_sign_in"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_signin"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_sign_in" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_slogan"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_title_sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/blue_main"
        app:endIconMode="clear_text"
        app:endIconTint="@color/blue_main"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_slogan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/blue_main"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/blue_main"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/input_layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="38dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn_cancel"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="26dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />


    <View
        android:id="@+id/view_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/dont_have_account"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/view_signup"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_signup" />

    <TextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/btn_title_signup"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/view_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_title_signup"
        app:layout_constraintTop_toTopOf="@id/view_signup"
        app:layout_constraintVertical_bias="0.451"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>