<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <TextView
        android:id="@+id/tv_title_general"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/general"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_title_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/language"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_language"
        app:layout_constraintTop_toBottomOf="@id/tv_title_general" />

    <ImageButton
        android:id="@+id/btn_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_round_arrow"
        app:tint="@color/blue_main"
        app:layout_constraintTop_toTopOf="@id/tv_title_language"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_language"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/tv_title_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dark_mode"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switch_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_title_language" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_title_dark_mode"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/SwDarkMode"
        android:layout_marginHorizontal="16dp"/>

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:fontFamily="@font/montserrat"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>