<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/ic_bg_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dummy_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_title_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_event_eskul"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_auto_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_event">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/auto_slider_event"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:sliderAnimationDuration="1000"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="1000"
            app:sliderIndicatorGravity="start|bottom"
            app:sliderIndicatorMargin="5dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="1dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderIndicatorRtlMode="auto"
            app:sliderScrollTimeInSec="4"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/schedule_eskul"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/layout_auto_slide" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_schedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_schedule"
        tools:listitem="@layout/item_list_scheduler" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>